# CMake_Project_Template

./: CMakeLists.txt
APP/: CMakeLists.txt  main.cpp
CORE/: CMakeLists.txt
CORE/src/: test.cpp  test.h
